--- a/index.html
+++ b/index.html
@@ -20,9 +20,29 @@
   <!--[if lte IE 9]>
     <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="https://browsehappy.com/">upgrade your browser</a> to improve your experience and security.</p>
   <![endif]-->
-
   <!-- Add your site or application content here -->
-  <p>Hello world! This is HTML5 Boilerplate.</p>
+
+    <header class="header" style="height: 120px; width: 100%; background-color: #333333;">
+      <div class="left">
+        <div class="logo-area" style="margin-top: 25px; margin-left: 30px; ">
+          <img style="width: 170px; position: absolute; right: z-index:10;" src="img/logo.svg" alt="" />
+        </div>
+      </div>
+      <div class="right">
+        <div class="menu">
+          <ul>
+            <li><a>MAIN</a></li>
+            <li><a>HOW IT WORKS</a></li>
+            <li><a>ABOUT US</a></li>
+            <li><a>CONTACT</a></li>
+          </ul>
+        </div>
+      </div>
+    </header>
+
+
+
+
   <script src="js/vendor/modernizr-3.6.0.min.js"></script>
   <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
   <script>window.jQuery || document.write('<script src="js/vendor/jquery-3.3.1.min.js"><\/script>')</script>
