--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/main.css">
+  <link href="https://fonts.googleapis.com/css?family=KoHo" rel="stylesheet">
 </head>
 
 <body>
@@ -25,20 +26,25 @@
     <header class="header" style="height: 120px; width: 100%; background-color: #333333;">
       <div class="left">
         <div class="logo-area" style="margin-top: 25px; margin-left: 30px; ">
-          <img style="width: 170px; position: absolute; right: z-index:10;" src="img/logo.svg" alt="" />
+          <img style="width: 170px; position: absolute; z-index:10;" src="img/logo.svg" alt="" />
         </div>
       </div>
       <div class="right">
         <div class="menu">
           <ul>
-            <li><a>MAIN</a></li>
-            <li><a>HOW IT WORKS</a></li>
+            <li><a>TOP</a></li>
+            <li><a>WHAT DOES IT DO</a></li>
             <li><a>ABOUT US</a></li>
-            <li><a>CONTACT</a></li>
+            <li><a>CONTACTS</a></li>
           </ul>
         </div>
       </div>
     </header>
+    <div class="welcome-scrn">
+      <div class="welcome-text">
+        <h1>Look in to the future</h1>
+      </div>
+    </div>
 
 
 
