--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <link rel="stylesheet" href="css/main.css">
   <link href="https://fonts.googleapis.com/css?family=KoHo" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Comfortaa" rel="stylesheet">
-
+  <link href="https://fonts.googleapis.com/css?family=Fredoka+One|Open+Sans" rel="stylesheet">
 </head>
 
 <body>
@@ -25,10 +25,10 @@
   <![endif]-->
   <!-- Add your site or application content here -->
 
-    <header class="header" style="height: 120px; width: 100%; background-color: #333333;">
+    <header class="header" style="height: 140px; width: 100%; background-color: #fff;">
       <div class="left">
-        <div class="logo-area" style="margin-top: 25px; margin-left: 30px; ">
-          <img style="width: 170px; position: absolute; z-index:10;" src="img/logo.svg" alt="" />
+        <div class="logo-area" style="margin-top: 40px; margin-left: 60px; ">
+          <img style="width: 210px; position: absolute; z-index:10;" src="img/logo.svg" alt="" />
         </div>
       </div>
       <div class="right">
@@ -44,7 +44,7 @@
     </header>
     <div class="welcome-scrn">
       <div class="welcome-text">
-        <h1>Look in to the future</h1>
+        <h1><span>Look in to the</span><span style="font-size:55px;">future.</span></h1>
       </div>
     </div>
 
