--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     </header>
     <div class="welcome-scrn">
       <div class="welcome-text">
-        <h1><span>Look in to the</span><span style="font-size:55px;">future.</span></h1>
+        <h1><span>Look in to the</span><span style="">future.</span></h1>
       </div>
     </div>
 
